# Multi-agent-Risk-Reporter-PoC

./: .gitignore  AGENTS.md  BLUEPRINT.md  Makefile  README.md  bandit-report.json  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yaml  ci.yaml.disabled
configs/: model.yaml  pipeline.yaml
src/: cli.py  types.py
src/agents/: analyzer_agent.py  composer_agent.py  graph.py  state.py  verifier_agent.py
src/ingestion/: chunker.py  parser.py  pii.py
src/prompts/: README.md  __init__.py  analyzer.py  composer.py  verifier.py
src/retrieval/: __init__.py  retriever.py  store.py
src/services/: __init__.py  config.py  llm.py
tests/: README.md  __init__.py  ci_smoke.py  conftest.py  test_agents.py  test_config.py  test_ingestion.py  test_retrieval.py
